# bazel_demo

./: README.md  WORKSPACE.bazel  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/crashactivity/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  BUILD.bazel
app/src/main/java/com/example/crashactivity/: Coffee.java  CoffeeMaker.java  DripCoffeeModule.java  ElectricHeater.java  Heater.java  MainActivity.kt  MyApplication.kt  Pump.java  PumpModule.java  Thermosiphon.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/crashactivity/: ExampleUnitTest.kt
