load("@build_bazel_rules_android//android:rules.bzl", "android_binary", "android_library")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library", "kt_compiler_plugin")

kt_compiler_plugin(
    name = "open_for_testing_plugin",
    options = {
        "annotation": "plugin.allopen.OpenForTesting",
    },
    deps = [
        "@com_github_jetbrains_kotlin//:allopen-compiler-plugin",
        "@maven//:org_jetbrains_kotlin_kotlin_android_extensions",
        "@maven//:org_jetbrains_kotlin_kotlin_compiler_embeddable",
    ],
)

kt_android_library(
    name = "kotlin",
    srcs = glob(["java/com/example/crashactivity/*.kt"]),
    custom_package = "com.example.crashactivity",
    manifest = "AndroidManifest.xml",
    plugins = [
        ":open_for_testing_plugin",
    ],
    resource_files = glob(["res/**"]),
    deps = [
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)

android_binary(
    name = "media",
    custom_package = "com.example.crashactivity",
    manifest = "AndroidManifest.xml",
    deps = [
        ":kotlin",
        "@maven//:androidx_appcompat_appcompat",
    ],
)
