load("@build_bazel_rules_android//android:rules.bzl", "android_binary", "android_library")
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library", "kt_compiler_plugin", "kt_jvm_import", "kt_jvm_library")
load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

kt_android_library(
    name = "kotlin",
    srcs = glob(["java/com/example/crashactivity/*.kt"]),
    custom_package = "com.example.crashactivity",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        ":java",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)

android_library(
    name = "java",
    srcs = glob(["java/com/example/crashactivity/*.java"]),
    deps = [
        ":dagger",  # For Dagger
        ":dagger-producers",  # For Dagger Producers
        ":dagger-spi",  # For Dagger SPI
    ],
)

android_binary(
    name = "media",
    custom_package = "com.example.crashactivity",
    manifest = "AndroidManifest.xml",
    multidex = "native",
    deps = [
        ":kotlin",
        "@maven//:androidx_appcompat_appcompat",
    ],
)
